--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "WEB API I Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "start": "node index.js"
+  },
+  "engines":{
+    "node":"10.16.3",
+    "npm":"6.9.0"
+
   },
   "repository": {
     "type": "git",
